# paper-bitcoin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NUT15.md  README.md  TECHNICAL_DOCUMENTATION.md  patch.py  physical-ecash-protocol.md  project_peer_review_feedback.md  tests_audit.md
.github/workflows/: ci.yml
cashu-app/: .gitignore  DESIGN.md  index.html  package-lock.json  package.json  test-bech32.js  test-nip98-bad-payload.js  test-nip98-get.js  test-nip98-good.js  test-nip98-http.js  test-nip98-npub.js  test-nip98-npubx-create.js  test-nip98-npubx-fresh.js  test-nip98-npubx-get.js  test-nip98-npubx-no-payload.js  test-nip98-npubx-patch.js  test-nip98-npubx-stripped.js  test-nip98-npubx.js  test-nip98-trailing.js  test-nip98-undefined.js  test-ur.mjs  test-validate.js
cashu-app/src/: App.css  App.tsx  ErrorBoundary.tsx  constants.local.ts  main.tsx  polyfills.ts
cashu-app/src-tauri/: Cargo.toml  Entitlements.mac.plist  Info.plist  tauri.conf.json
cashu-app/src-tauri/capabilities/: default.json
cashu-app/src-tauri/icons/: icon.icns
cashu-app/src-tauri/src/: error.rs  lib.rs  main.rs  utils.rs
cashu-app/src-tauri/src/commands/: auth.rs  history.rs  issue.rs  mod.rs  pay.rs  receive.rs  redeem.rs  send.rs  verify.rs  wallet.rs
cashu-app/src/components/auth/: ConfirmResetDialog.tsx  CreateWalletForm.tsx  LoginForm.tsx  RecoveryPhraseDisplay.tsx  RestoreWalletForm.tsx
cashu-app/src/components/history/: TransactionCard.tsx  TransactionDetailsModal.tsx
cashu-app/src/components/home/: ActionMenuModal.tsx  BitcoinModal.tsx  EcashModal.tsx  LightningAddressCard.tsx  MintInfoModal.tsx  MomoTransferModal.tsx  PayInvoiceCard.tsx  PayInvoiceModal.tsx  PendingTxAlert.tsx  RecentTransactions.tsx  SendEcashModal.tsx  TrustedMintsList.tsx  WalletBalanceCard.tsx
cashu-app/src/components/issue/: InvoicePaymentPending.tsx  IssueAmountStep.tsx  IssueLoadingStep.tsx  IssueMintsStep.tsx  IssueNoteForm.tsx  IssueSummaryStep.tsx  IssuedNoteSuccess.tsx  WalletPaymentPending.tsx
cashu-app/src/components/navigation/: AddMintModal.tsx  BottomNav.tsx  TopNav.tsx
cashu-app/src/components/scan/: NoteVerificationResult.tsx  RedeemLoadingStep.tsx  RedeemNoteForm.tsx  ScanNoteForm.tsx
cashu-app/src/components/settings/: BiometricToggle.tsx  NostrSection.tsx  RecoveryPhraseSection.tsx  VaultStatusPanel.tsx  WalletManagementSection.tsx
cashu-app/src/components/shared/: AmountDisplay.tsx  FullScreenLoader.tsx  MintIcon.tsx  MintName.tsx  NumberPad.tsx  PageHeader.tsx
cashu-app/src/hooks/: useAuth.ts  useBitcoin.ts  useEcash.ts  useHistory.ts  useHome.ts  useIssue.ts  useMintInfo.ts  useMints.ts  useNostr.ts  useScan.ts  useTransactionProcessor.ts  useUrDecoder.ts  useUrEncoder.ts
cashu-app/src/pages/: Auth.tsx  History.tsx  Home.tsx  Issue.tsx  Mints.tsx  Pay.tsx  Scan.tsx  Settings.tsx
cashu-app/src/services/: boltzService.ts  flowServices.ts  lightningService.ts  lnurlService.ts  momoService.ts  nostrService.ts
cashu-app/src/store/: nostrStore.ts  transactionStore.ts  wallet.ts
cashu-app/src/types/: momo.ts
cashu-app/src/utils/: bitcoinValidation.ts  encryption.ts  format.ts
crates/ecash-cli/: Cargo.toml
crates/ecash-cli/src/: main.rs
crates/ecash-core/: Cargo.toml
crates/ecash-core/src/: bin_test.rs  compact.rs  derivation.rs  dhke.rs  error.rs  lib.rs  types.rs
crates/ecash-encoder/: Cargo.toml
crates/ecash-encoder/src/: lib.rs
crates/ecash-tests/: Cargo.toml
crates/ecash-tests/tests/: client_tests.rs  core_tests.rs  encoder_tests.rs  history_tests.rs  melt_tests.rs  mint_tests.rs  verifier_tests.rs  wallet_tests.rs
crates/ecash-verifier/: Cargo.toml
crates/ecash-verifier/src/: lib.rs
crates/ecash-wallet/: Cargo.toml
crates/ecash-wallet/src/: client.rs  direct.rs  history.rs  invoice.rs  lib.rs  melt.rs  melt.rs.bak  mint.rs  restore.rs  state.rs  swap.rs
website/: config.js  index.html
