[workspace]
members = [
    "crates/ecash-core",
    "crates/ecash-wallet",
    "crates/ecash-encoder",
    "crates/ecash-verifier",
    "crates/ecash-cli",
    "cashu-app/src-tauri", "crates/ecash-tests",
]
resolver = "2"

[workspace.dependencies]
# Elliptic-curve cryptography (secp256k1, Cashu NUT-00)
k256        = { version = "0.13", features = ["arithmetic"] }
sha2        = "0.10"
hmac        = "0.12"
rand        = { version = "0.8", features = ["getrandom"] }
hex         = "0.4"
base64      = "0.22"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Async runtime
tokio       = { version = "1", features = ["full"] }

# HTTP client (wallet → mint)
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap        = { version = "4", features = ["derive", "env"] }

# Errors
anyhow      = "1"
thiserror   = "1"

# Identifiers
uuid        = { version = "1", features = ["v4"] }

# QR codes (SVG output, no image dep conflict)
qrcode      = "0.14"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# System dirs
dirs = "5"
