[package]
name = "bitnotes"
version = "0.1.0"
description = "Physical cashu system"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cashu_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
bincode = "1.3.3"

ecash-core = { path = "../../crates/ecash-core" }
ecash-wallet = { path = "../../crates/ecash-wallet" }
ecash-encoder = { path = "../../crates/ecash-encoder" }
ecash-verifier = { path = "../../crates/ecash-verifier" }

reqwest = { workspace = true, features = ["json"] }
flate2 = "1.1.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
svg2pdf = "0.13.0"
base45 = "3.2.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"

