[package]
name = "ecash-cli"
version = "0.1.0"
edition = "2021"
description = "Physical ecash command-line interface"

[[bin]]
name = "ecash"
path = "src/main.rs"

[dependencies]
ecash-core     = { path = "../ecash-core" }
ecash-wallet   = { path = "../ecash-wallet" }
ecash-encoder  = { path = "../ecash-encoder" }
ecash-verifier = { path = "../ecash-verifier" }

clap               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dirs               = { workspace = true }
rand               = { workspace = true }
reqwest            = { workspace = true }
indicatif          = "0.18.4"
comfy-table        = "7.2.2"
colored            = "3.1.1"
qr2term            = "0.3.3"
rpassword          = "7"
inquire            = "0.9.4"
base64.workspace = true
flate2 = "1.1.9"
serde = { workspace = true, features = ["derive"] }
bincode = "1.3.3"
