[package]
name = "ecash-core"
version = "0.1.2"
edition = "2021"
description = "Cashu NUT-00 DHKE blind signatures and shared ecash types"

[dependencies]
k256       = { workspace = true }
sha2       = { workspace = true }
hmac       = { workspace = true }
rand       = { workspace = true }
hex        = { workspace = true }
base64     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
