[package]
name = "ecash-tests"
version = "0.1.1"
edition = "2021"

[dependencies]
ecash-core = { path = "../ecash-core" }
ecash-wallet = { path = "../ecash-wallet" }
ecash-encoder = { path = "../ecash-encoder" }
ecash-verifier = { path = "../ecash-verifier" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = "0.6.2"
